# CrackResume

./: README.md  app.py  gemini_analyzer.py  models.py  pyproject.toml  replit.md  routes.py  text_extractor.py
instance/: crackresume.db
static/css/: style.css
static/js/: main.js
templates/: analysis.html  index.html
uploads/: .gitkeep
